--- a/Mekitamete/Mekitamete.csproj
+++ b/Mekitamete/Mekitamete.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.113.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Http\Responders\" />
+  </ItemGroup>
+
 </Project>
